[package]
name = "afrotd"
version = "0.4.7"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["tracing"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
eyre = "0.6.12"
indexmap = { version = "2.12.1", features = ["serde"] }
maud = { version = "0.27.0", features = ["axum"] }
once_cell = "1.21.3"
rand = "0.9.2"
rand_pcg = "0.9.0"
rand_seeder = "0.4.0"
regex = "1.12.2"
roman-numerals = "0.4.0"
rss = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serenity = "0.12"
veil = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
genanki-rs = "0.4.0"

[dev-dependencies]
insta = { version = "1.45.1", features = ["yaml"] }
reqwest = { version = "0.12.28", features = ["blocking"] }
temp_testdir = "0.2.3"
tidier = "0.5.3"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "thin"
