[package]
name = "afrotd"
version = "0.4.9"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["tracing"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
clap = { version = "4.6.0", features = ["derive"] }
jiff = "0.2.23"
eyre = "0.6.12"
indexmap = { version = "2.13.0", features = ["serde"] }
maud = { version = "0.27.0", features = ["axum"] }
once_cell = "1.21.4"
rand = "0.10.0"
rand_pcg = "0.10.1"
rand_seeder = "0.5.0"
regex = "1.12.3"
roman-numerals = "0.4.0"
rss = "2.0.12"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serenity = "0.12"
veil = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
genanki-rs = "0.4.0"
shadow-rs = { version = "1.7.1", default-features = false }
anki_bridge = { version = "0.10.2", features = ["ureq_blocking"] }

[build-dependencies]
shadow-rs = "1.7.1"

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
temp_testdir = "0.2.3"
tidier = "0.5.5"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "thin"
